# libsys

./: CMakeLists.txt  README.md  code_standard.xml  inspections.xml
src/: objects.cpp  objects.hpp
test/: main_gtest.cpp
